[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Daoud Clarke", email = "daoud.clarke@gmail.com"},
]
dependencies = [
    "botocore",
    "boto3",
    "ujson",
    "warcio",
    "idna",
    "beautifulsoup4",
    "lxml",
    "justext~=3.0",
    "pandas~=1.3",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "Copyright DataPastry 2021"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
